feat: refactor JWT and Tenant filters for improved readability and performance